--- a/src/solicitudMonitoria/JefeSeccionBundle/Resources/views/mainJefeSeccion.html.twig
+++ b/src/solicitudMonitoria/JefeSeccionBundle/Resources/views/mainJefeSeccion.html.twig
@@ -11,7 +11,7 @@
                          <a href="{{url('solicitud_monitoria_jefe_seccion_homepage')}}"><item> Inicio</item></a>
                          <a href="{{url('solicitud_monitoria_jefe_seccion_monitorias')}}"><item> Adm. Monitorías</item></a>
                          <a href="{{url('solicitud_monitoria_jefe_seccion_asignaciones')}}"><item> Asignaciones </item></a>
-                         
+                         <a href="{{url('solicitud_monitoria_jefe_seccion_calificar_estudiante')}}"><item> Calificar monitores </item></a>
                          <a href="{{url('solicitud_monitoria_seguridad_logout')}}"><item> Salir</item></a>
                     {% endblock %}
                </div>
